# Brain_Games

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml  checks.yml
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_games.py
