[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
packages = [
  { include = "brain_games" },
]
authors = ["scaumedes <marat.usmanov.07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
